--- a/css/colors.css
+++ b/css/colors.css
@@ -10,9 +10,14 @@
 }
 
 .title{
+    background-image: url("rainbow.jpg");
+    margin-left:6%;
+    margin-right: 6%;
     text-align: center;
     font-family:'Courier New', Courier, monospace;
-    color: blue;
+    color: white;
+    text-shadow: rgb(0, 0, 0) 2px 0px 5px;
+    font-size: 30px;
 }
 
 .chosen{
@@ -29,7 +34,7 @@
 }
 
 .space{
-    padding: 3.5%;
+    padding: 3%;
     margin-bottom: 0.5%;
     margin-right: 5%;
     border-left: 5px solid black;
@@ -42,5 +47,39 @@
     text-shadow: #000 0px 0px 2px;
     -webkit-font-smoothing: antialiased;
 }
+
+tr {
+    text-shadow: #000 0px 0px 2px;
+    -webkit-font-smoothing: antialiased;
+
+}
+
+td {
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+    font-size: larger;
+}
+
+table {
+    border-spacing: 35px;
+    border-collapse: separate;
+    width:auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+td:hover {
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: lightslategrey;
+}
+
+#saveCustomColor {
+    background-color: grey;
+    border: none;
+    color: white;
+    font-size: 20px;
+    padding: 15px;
+}
+
 
 
