--- a/css/colors.css
+++ b/css/colors.css
@@ -10,9 +10,14 @@
 }
 
 .title{
+    background-image: url("rainbow.jpg");
+    margin-left:6%;
+    margin-right: 6%;
     text-align: center;
     font-family:'Courier New', Courier, monospace;
-    color: blue;
+    color: white;
+    text-shadow: rgb(0, 0, 0) 2px 0px 5px;
+    font-size: 30px;
 }
 
 .chosen{
@@ -29,7 +34,7 @@
 }
 
 .space{
-    padding: 3.5%;
+    padding: 3%;
     margin-bottom: 0.5%;
     margin-right: 5%;
     border-left: 5px solid black;
@@ -75,4 +80,6 @@ td:hover {
     font-size: 20px;
     padding: 15px;
 }
+
+
 
