--- a/css/colors.css
+++ b/css/colors.css
@@ -4,6 +4,7 @@
     margin-right: auto;
     text-align: center;
 }
+
 .column{
     width: 50%;
     float: left;
@@ -19,6 +20,8 @@
     text-shadow: rgb(0, 0, 0) 2px 0px 5px;
     font-size: 30px;
 }
+
+
 
 .chosen{
     float: left;
@@ -73,6 +76,11 @@ td:hover {
     -webkit-text-stroke-color: lightslategrey;
 }
 
+td:hover {
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: lightslategrey;
+}
+
 .styledBtn {
     background-color: grey;
     border: none;
@@ -86,16 +94,49 @@ p {
     font-size: 20px;
 }
 
-#customColorFunctions {
-    width: 800px ;
-    margin-left: auto ;
-    margin-right: auto ;
-    padding: 5px;
-    border: 3px black;
+
+body {
+    padding: 2em;
 }
 
-#tableOfColors {
-    margin-top: 40%;
+#container {
+    width: 600px;
+    height: 600px;
+    border: 1px solid #000;
+    margin-top: 10%;
+    position: relative;
 }
 
+#center {
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    left: 295px;
+    top: 295px;
+    background: #000;
+}
 
+.field {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    background: #f00;
+}
+
+#crosshair-x {
+    width: 600px;
+    height: 1px;
+    background: #000;
+    position: absolute;
+    left: 0;
+    top: 300px;
+}
+
+#crosshair-y {
+    width: 1px;
+    height: 600px;
+    background: #000;
+    position: absolute;
+    left: 300px;
+    top: 0;
+}
