--- a/css/colors.css
+++ b/css/colors.css
@@ -65,7 +65,6 @@ td {
 
 table {
     border-collapse: separate;
-    margin-top: 38%;
     width:auto;
     margin-left: auto;
     margin-right: auto;
@@ -102,5 +101,11 @@ body {
 
 #tutText {
     margin-top: 400px;
+}
+
+#results_Grid {
+    width: 100%;
+    display: table;
+    table-layout: fixed;
 }
 
